# tcp-chat-rs

./: .typos.toml  Cargo.toml  README.md  docker-compose.yml
client/: Cargo.toml
client/src/: main.rs
client/src/app/: chat.rs  interceptor.rs  mod.rs  registry.rs  ui.rs
llm/: Dockerfile
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/services/: registry.rs
shells/default/: default.nix
sqlrunner/: Dockerfile
tui/: Cargo.toml
tui/src/: main.rs
tui/src/app/: chat.rs  interceptor.rs  mod.rs  registry.rs  ui.rs
tui/src/chat/: interceptor.rs  mod.rs
tui/src/registry/: mod.rs
