[package]
name = "tcp-chat-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.11.0", features = ["tls"] }
prost = "0.12.6"
prost-types = "0.12.4"
color-eyre = "0.6.3"
ratatui = "0.26.3"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
