[package]
name = "tcp-chat-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
tcp-chat = { path = "../server" }
tonic = { version = "0.11.0", features = ["tls"] }
color-eyre = "0.6.3"
ratatui = "0.26.3"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["v4"] }
crossterm = "0.27.0"
tokio-util = "0.7.11"

[lints]
workspace = true
